# nrtsearch-mcp-server

./: .gitignore  CONTRIBUTING.md  COPILOT_INTEGRATION.md  IMPORT_ERRORS.md  LICENSE  README.md  claude_desktop_config.json  config.json  copilot-instructions.md  install_mcp.sh  mcp_requirements.txt  pyproject.toml  quickstart.sh  raw_mcp_client.py  requirements.txt  run_server.sh  setup.py  test_connection.py  test_list_indexes.py  test_nrtsearch_connection.py
nrtsearch_mcp/: __init__.py  config.py  logging.py  nrtsearch_api.py  server.py  settings.py
nrtsearch_mcp/.github/: copilot-instructions.md
nrtsearch_mcp/tools/: __init__.py  index.py  search.py  utils.py
stubs/: README.md
stubs/mcp/: __init__.py
stubs/mcp/server/: __init__.py  fastmcp.py
tests/: __init__.py  test_search_impl.py  test_server.py  test_tools.py
