[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


name = "nrtsearch-mcp"
version = "0.1.0"
description = "FastMCP wrapper around Yelp NRTSearch"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Thalita Vergilio", email = "your-email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing"
]
dependencies = [
    "fastmcp~=2.9",
    "httpx~=0.27",
    "pydantic~=2.7",
    "pydantic-settings~=2.2"
]

[project.urls]
"Homepage" = "https://github.com/tvergilio/nrtsearch-mcp-server"
"Bug Tracker" = "https://github.com/tvergilio/nrtsearch-mcp-server/issues"

[project.scripts]
nrtsearch-mcp = "nrtsearch_mcp.server:entrypoint"

[tool.setuptools]
packages = ["nrtsearch_mcp", "nrtsearch_mcp.tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Ignore missing imports for the MCP package
[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# Add the stubs directory to the search path
mypy_path = "stubs"
